<resources>
    <string name="app_name">FrontRow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인 or 회원가입하기</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="welcome">"환영합니다!"</string>
    <string name="invalid_username">유효하지 않은 이름입니다!</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"로그인 실패"</string>

    <string name="hero_title">건축을\n더 가치있게\n기록하세요</string>
    <string name="sign_up_cta">회원이 아니세요? 회원가입</string>

</resources>